Added callAsyncJavaScript WebView method, fix #642, fix #614